--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "framer-motion": "^7.6.19",
     "moment": "^2.29.4",
     "next": "13.0.5",
     "postcss": "^8.4.19",
